# plp-guias

guia0/: CHANGELOG.md  guia0.cabal
guia0/lib/: Guia0.hs
guia0/tests/: Guia0Test.hs
guia1/: CHANGELOG.md  guia1.cabal
guia1/lib/: Guia1.hi  Guia1.hs
guia1/tests/: Guia1Test.hs
