cabal-version:      2.4
name:               guia0
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nicolás Sarfati
maintainer:         nmsarfati@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library guia0-lib
    exposed-modules: Guia0
    hs-source-dirs: lib
    build-depends: base ^>=4.17
    default-language: Haskell2010


executable guia0
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Guia0Test.hs
    build-depends: base ^>=4.17, HUnit ^>=1.6, guia0-lib
    hs-source-dirs: tests
    default-language: Haskell2010
